# compass

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
src/: Makefile.am  compass.c  compass.h  prob.c
src/data/: data.c  data.h  delaunay.c  delaunay.h  edgelen-cc.c  near.c  neigh.h  xnear.c
src/data/kdtree/: kdbuild.c  kdnear.c  kdspan.c  kdtree.h  kdtwoopt.c
src/env/: alloc.c  dlsup.c  env.c  env.h  error.c  stdc.h  stdout.c  stream.c  time.c  tls.c
src/op/: io.c  op.c  op.h  prob.c  solution.c
src/op/ea/: add.c  crossover.c  drop.c  ea.c  ea.h  mutation.c  selection.c
src/op/init/: init.c  init.h  select.c
src/tsp/: prob.c  tsp.c  tsp.h
src/tsp/init/: init.c
src/tsp/linkern/: flip_two.c  linkern.c  linkern.h
src/tsp/ls/: ls.c
src/util/: dmp.c  dmp.h  edgemap.c  hash.c  jd.c  jd.h  misc.h  rng.c  rng.h  rng1.c  signal.c  str2int.c  str2num.c  util.h
